1998-08-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h: Move setRaster: from Creating to Setting phase.

1998-08-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (_Pixmap): Add create:widget: and create:file:.
	Move setRaster: to using phase (still need to make implementation
	synchronize).  Add save:.

1998-07-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Graph): Add setRangesXMin:Max:.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Graph): Arguments to setScaleModeX:Y: are now boolean, not
	integers. 

1998-07-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (_VarProbeEntry): Replace setProbeType: with setVarProbe:.
	Add getVarProbe.

1998-07-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (_GraphElement): New method -setWidth:.

1998-07-01  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* gui.h (Widget): Rename setPositionX:Y: to setX:Y:.  Add new
	methods -getX and -getY.
	(_WindowGeometryRecord): Remove getWindowGeometry and
	setWindowGeometry:.  Remove -describe:.  Add setX:Y:,
	setWidth:Height:, getSizeFlag, getPositionFlag, getWidth,
	getHeight, getX, and getY.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile: Remove.
	
1998-06-21  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

1998-06-14  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* gui.h: Make separate ifdefs for GUI macros to work with the
	protocol script.  Use #if 0 for awt.

1998-06-05  Alex Lancaster  <alex@santafe.edu>

	* gui.h: Fixed (#if 1) around the tk macros - erroneosly set to
	(#if 0).

1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* gui.h: Update documentation tags.
	Use #if 0 for macros to avoid multiple definitions in protocol.el.

1998-05-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* gui.h (_ArchivedGeometryWidget): Declare -loadWindowGeometryRecord,
	-registerAndLoad, +createBegin:, -updateArchiver, -getDestroyedFlag,
	and -drop.
